--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-
+<div class="mystyle">
+  <h1>Welcome in my Movies!</h1>
+  </div>
 
   <nav>
     <a routerLink="/cart" routerLinkActive="Active">Cart</a>
+    
     <a routerLink="/movies" routerLinkActive="Active">Movies</a>
   </nav>
+
   <router-outlet></router-outlet>
