--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="mystyle">
-  <h1>Welcome in my Movies!</h1>
+  <h1>Welcome in  Movies!</h1>
   </div>
 
   <nav>
     <a routerLink="/cart" routerLinkActive="Active">Cart</a>
-    
+
     <a routerLink="/movies" routerLinkActive="Active">Movies</a>
   </nav>
 
